<resources>
    <string name="app_name">CountingDown -- By 小C</string>
    <string name="title_home">Home</string>
    <string name="title_record">New Task</string>
    <string name="title_setting">Setting</string>
    <string name="task_title">Task Title</string>
    <string name="task_desc">Description</string>
    <string name="task_due">Due Date</string>
    <string name="addTask">Add Task</string>
    <string name="cancel">Cancel</string>
    <string name="selectDate">Select Date</string>
    <string name="no_title_warning">Please Enter Title!</string>
    <string name="task_desc_input">Enter the task detail here</string>
    <string name="past_string_2">days past</string>
    <string name="left_string_1">" "</string>
    <string name="past_string_1">" "</string>
    <string name="left_string_2">days left</string>
    <string name="today_string">is today</string>
    <string name="editTask">Edit</string>
    <string name="no_desc">There is no description for this task</string>
    <string name="updateTask">Update</string>
    <string name="delete_button">Delete</string>
    <string name="delete_alert_message">Are you sure you want to delete this task?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="detail">Detail</string>
    <string name="alpha_order">by Alphabetic</string>
    <string name="due_date_order">by Due Date</string>
    <string name="day_left_order">by Day Left</string>
    <string name="language_setting">Display Language</string>
    <string name="language_setted">Updated Successfully! You need restart the app to see the new changes.</string>


    <string-array name="language_array_spinner">
        <item>System Default</item>
        <item>English</item>
        <item>中文</item>
        <item>日本語</item>
    </string-array>
    <string name="save">SAVE</string>
    <string name="back_default">BACK DEFAULT</string>
    <string name="back">Back</string>
    <string name="permission_label">Data Protection</string>
    <string name="permission_description">Prevent 3rd party  read your data</string>
</resources>
